# chessgen

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: perft.rs
src/chessgen/: lib.rs
src/chessgen/bitboard/: bitboard.rs  bitboard_constants.rs  error.rs  index.rs  index_constants.rs  mod.rs  operators.rs
src/chessgen/chessboard/: board_indices.rs  chessboard.rs  color.rs  error.rs  mod.rs  move.rs  piece.rs
src/chessgen/chessboard/generator/: error.rs  generator.rs  generator_bishop.rs  generator_king.rs  generator_knight.rs  generator_pawn.rs  generator_rook.rs  mod.rs  perft.rs  zobrist.rs
